<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_photos_list">

    <fragment
        android:id="@+id/nav_photos_list"
        android:name="edu.rosehulman.photobucket.ui.PhotoListFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photo_list" />

    <fragment
        android:id="@+id/nav_photos"
        android:name="edu.rosehulman.photobucket.ui.PhotoEditFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photos_edit" />

    <fragment
        android:id="@+id/nav_photos_detail"
        android:name="edu.rosehulman.photobucket.ui.PhotoDetailFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photo_detail" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.rosehulman.photobucket.ui.Profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.rosehulman.photobucket.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>