<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/small_url_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/smallcaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/small_url_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2sp"
        android:text="@string/caption"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/smallcaption"
        android:text="@string/uid"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/small_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/small_url_image"
        android:layout_alignLeft="@+id/smallcaption"
        android:layout_marginTop="2sp"
        android:src="@drawable/ic_baseline_image_24" />

</RelativeLayout>