<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.ProfileFragment">


        <TextView
            android:id="@+id/yourProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:text="@string/your_profile"
            android:layout_marginTop="150sp"
            />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:text="@string/xingheng_lin"
            android:textStyle="bold"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:contentDescription="Image"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image_view"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/_111_years_old"
            android:layout_marginTop="20sp"
            />
        <TextView
            android:id="@+id/major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/age"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/bilbo_baggins"
            android:layout_marginTop="20sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/major">
                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="logout" />
                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="edit" />


        </RelativeLayout>



    </RelativeLayout>